Version 0.2.0+dev
- raised minimal version of PHP to 7.1
- added dependency on symfony/options-resolver

Version 0.2.0
- raised minimal version of PHP to 7
- empty line at end of source files is ignored now
- generated pages no longer contain empty <title> if the title is not defined

Version 0.1.0
- initial version