@@ -1,7 +1,9 @@
 <html>
 <head>
-  <meta charset=\"utf-8\">
+  <meta charset="utf-8">
   <title>%%title%%</title>
+  %%styles%%
+  %%scripts%%
 </head>
 <body>
 %%source%%
