@@ -1,0 +1,13 @@
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Assets</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style2.css">
+  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="script2.js"></script>
+</head>
+<body>
+<h1>Assets</h1>
+</body>
+</html>
