@@ -1,6 +1,6 @@
 <html>
 <head>
-  <meta charset=\"utf-8\">
+  <meta charset="utf-8">
 </head>
 <body>
 <h1>Index</h1>
